--- a/prefect.yaml
+++ b/prefect.yaml
@@ -1,7 +1,7 @@
 # File for configuring project / deployment build, push and pull steps
 
 # Generic metadata about this project
-name: zoom_mlops
+name: prefect-mlops-zoomcamp
 prefect-version: 2.10.8
 
 # build section allows you to manage and build docker images
